# glib-gio-kqueue-integration

./: README  configure.ac
gio/: Makefile.am  giomodule.c
gio/kqueue/: Makefile.am  dep-list.c  gkqueuedirectorymonitor.c  gkqueuedirectorymonitor.h  gkqueuefilemonitor.c  gkqueuefilemonitor.h  kqueue-exclusions.c  kqueue-exclusions.h  kqueue-helper.c  kqueue-helper.h  kqueue-missing.c  kqueue-missing.h  kqueue-sub.c  kqueue-sub.h  kqueue-thread.c  kqueue-thread.h  kqueue-utils.c  kqueue-utils.h
